@@ -1,3 +1,8 @@
+2004-01-03  Ted Gould <ted@gould.cx>
+
+	* src/helper/bezier-utils.cpp, src/inkscape-stock.h:
+	  Fixing some Doxygen errors.
+
 2004-01-03  MenTaLguY <mental@rydia.net>
 
 	* src/inkscape.cpp, src/inkscape.h, src/main.cpp:
